--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,7 +9,7 @@ $icon-font-path: '../fonts/';
 body {
   padding-top: 20px;
   padding-bottom: 20px;
- background-image: url("../pencil.png");
+
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -17,14 +17,14 @@ body {
 img{
   margin:0 auto;
   display: block;
-  width:140px;
+  // width:140px;
 }
-p{
+.header-2{
   text-align: center;
   font-size: 20px;
-  // color: white;
+  color: white;
+  font-family: "Comic Sans MS", cursive, sans-serif;
 }
-
  .navbar-nav {
    width: 100%;
    text-align: center;
@@ -36,7 +36,60 @@ p{
      color:red;
    }
  }
-
  .dropdown{
-   text-align: center;
+  //  text-align: center;
  }
+ .container{
+  background-image: url("../pencil.jpeg");
+  // background-repeat: no-repeat;
+  width:100%;
+ }
+ .input-group{
+   .search-box{
+    //  width:276px;
+     background-color: black;
+   }
+ }
+
+ .icons{
+   background-color: red;
+   margin-top: 16px;
+   height:92px;
+ }
+ .store-locator-btn{
+   background-color: red;
+   color: white;
+   margin: 0 auto;
+   display: block;
+ }
+
+.promotions{
+  width:50%;
+  background-image: url("../pna-logo.png");
+}
+.latest-news{
+  width:50%;
+  background-image: url("../pna-logo.png");
+}
+h2{
+  text-align: center;
+  padding-top: 15px;
+  font-family: "Comic Sans MS", cursive, sans-serif;
+}
+p{
+  margin: 0 auto;
+  text-align: center;
+  width:81%;
+}
+.join-btn{
+  background-color: black;
+  color: white;
+}
+.shout-btn{
+  background-color: red;
+  color: white;
+}
+.group-buttons{
+  text-align: center;
+  padding-top: 24px;
+}
